--- a/public/admin/css/theme.css
+++ b/public/admin/css/theme.css
@@ -802,3 +802,82 @@
 
 }
 /* Language Dropdown CSS End */
+
+/* Default Navbar CSS Start */
+#cve_default_nav_wrap
+{
+    margin-top:15px
+}
+
+#cve_default_nav_wrap ul
+{
+    list-style:none;
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0
+}
+
+#cve_default_nav_wrap ul a
+{
+    display:block;
+    color:#333;
+    text-decoration:none;
+    font-weight:700;
+    font-size:12px;
+    line-height:32px;
+    padding:0 15px;
+    font-family:"HelveticaNeue","Helvetica Neue",Helvetica,Arial,sans-serif
+}
+
+#cve_default_nav_wrap ul li
+{
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0
+}
+
+#cve_default_nav_wrap ul li.current-menu-item
+{
+    background:#ddd
+}
+
+#cve_default_nav_wrap ul li:hover
+{
+    background:#f6f6f6
+}
+
+#cve_default_nav_wrap ul ul
+{
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#fff;
+    padding:0
+}
+
+#cve_default_nav_wrap ul ul li
+{
+    float:none;
+    width:200px
+}
+
+#cve_default_nav_wrap ul ul a
+{
+    line-height:120%;
+    padding:10px 15px
+}
+
+#cve_default_nav_wrap ul ul ul
+{
+    top:0;
+    left:100%
+}
+
+#cve_default_nav_wrap ul li:hover > ul
+{
+    display:block
+}
+/* Default Navbar CSS End */
